# DictLib

./: CMakeLists.txt  DictConfig.cmake  README.md  dict.c  dict.h
include/Dict/: Dict.h
include/dict/: dict_lib.h
src/: CMakeLists.txt  Dict.c  dict_lib.c
tests/: CMakeLists.txt  test01.c  test02.c
